[project]
name = "sse-server"
version = "0.1.0"
description = "Server-Sent Events server that streams responses in Langbase API format"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 119
target-version = "py313"

[tool.ruff.lint]
ignore = ["ANN", "COM812", "CPY", "D", "DOC", "ISC001", "RUF012", "T201"]
select = ["ALL"]

[tool.ruff.lint.isort]
force-single-line = true
case-sensitive = true
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[dependency-groups]
dev = [
    "ruff>=0.12.5",
]
